fix work and misclist spacing

--- a/source/stylesheets/_cv.scss
+++ b/source/stylesheets/_cv.scss
@@ -1,4 +1,8 @@
 
+.cv-section {
+  @include grid-row(nest);
+}
+
 .pub-list li {
  list-style-type: none;
  padding-bottom: 0.5em;
@@ -19,17 +23,35 @@
 }
 
 .job {
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 
   header {
 
+    .location {
+      margin-bottom: 0.05em;
+    }
+
     .title {
+      display: inline;
+      margin-top: 0;
+      margin-bottom: 0;
     }
     .duration {
+      padding-left: 1em;
     }
+    
+    margin-bottom: 0.5em;
   }
 }
 
 .misclist {
   @include block-grid(3);
+
+  li {
+    padding-bottom: 0.5em;
+  }
 }
 
